Fix style of notification button on mobile

--- a/frontend/src/js/components/presentational/NotificationButton/NotificationButton.css
+++ b/frontend/src/js/components/presentational/NotificationButton/NotificationButton.css
@@ -1,6 +1,6 @@
 .notification-button {
     width: 100%;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     border-radius: 0 !important;
 }
